# CppGameArchitecture

./: .gitignore  Doxyfile  Makefile  README.md  meson.build
components/: Health.hpp  Position.hpp
engine/: core.hpp
engine/entity-system/: ComponentManager.hpp
include/: GameCoreData.hpp  GameLogic.hpp  Renderer.hpp  entity-factories.hpp  load-input-dispatcher.hpp  load-input-tracker.hpp  load-resources.hpp  register-input-contexts.hpp  register-states.hpp  sfml-renderer-system.hpp
include/components/: CircularTraits.hpp
include/engine/: include.hpp
include/engine/entity-system/: ComponentManager.hpp  core.hpp  include.hpp
include/engine/game-loop/: GameLoop.hpp  forward-declarations.hpp
include/engine/input-system/: InputContext.hpp  InputDispatcher.hpp  InputTracker.hpp
include/engine/resource-system/: ResourceStorage.hpp
include/engine/scripting-system/: Lua.hpp  LuaWrapper.hpp
include/engine/state-system/: NullState.hpp  State.hpp  StateMachine.hpp  include.hpp
include/engine/testing/: core.hpp  include.hpp  testing-api.hpp
include/engine/utils/: Clock.hpp  FrequencyGauge.hpp  (+3 more)
include/examples/: entity-system.hpp  game-loop.hpp  multi-thread-game-loop.hpp  scripting-system.hpp  single-thread-game-loop.hpp  state-system.hpp
include/states/: MenuState.hpp
resources/: controls.json  lua-test.lua
src/: load-resources.cpp  main.cpp  register-input-contexts.cpp  register-states.cpp  sfml-renderer-system.cpp
tests/: main.cpp  stress.cpp  testEntitySystem.hpp  testInputSystem.hpp  testStateSystem.hpp
visitors/: ComponentPrinterVisitor.hpp
(+16 files in other folders)
